# DSA-Coach

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  start_app.py  start_backend.py  start_frontend.py
backend/: main.py
backend/services/: code_review_service.py  data_service.py  gemini_service.py  hint_service.py  problem_generator_service.py
frontend/: api_client.py  api_client_backup.py  api_client_fixed.py  app.py
frontend/components/: code_debugger.py  code_reviewer.py  hint_system.py  interview_simulator.py  problem_generator.py  progress_tracker.py
shared/: config.py  models.py
