[project]
name = "dsa-mentor"
version = "0.1.0"
description = "DSA Coach AI - Intelligent coding mentor for Data Structures and Algorithms"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "streamlit-ace>=0.1.1",
    "streamlit>=1.45.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.1.0",
]
